<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductListActivity"
    android:background="@drawable/fondo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/titleProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_product"
                android:textColor="@color/black"
                android:textSize="42sp"
                android:padding="25dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageFirstProduct"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/regla"  />

            <TextView
                android:id="@+id/nameFirstProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:inputType="textPersonName"
                android:text="@string/first_product_name"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnFirstProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/purple_200"
                android:text="@string/btbFirstProduct"
                android:textColor="@color/white" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageSecondProduct"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/tijeras" />

            <TextView
                android:id="@+id/nameSecondProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:inputType="textPersonName"
                android:text="@string/second_product_name"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnSecondProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/purple_200"
                android:text="@string/btnSecondProduct"
                android:textColor="@color/white" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageThirdProduct"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/lapiz" />

            <TextView
                android:id="@+id/nameThirdProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:inputType="textPersonName"
                android:text="@string/third_product_name"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnThirdProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/purple_200"
                android:text="@string/btnThirdProduct"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>